--- a/frontend/src/assets/scss/_normalize.scss
+++ b/frontend/src/assets/scss/_normalize.scss
@@ -1,75 +1,75 @@
-@use './_variables' as *;
+@use "./_variables" as *;
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 @font-face {
-  font-family: 'brownlight';
-  src: url('../fonts/brownlight.eot');
-  src: url('../fonts/brownlight.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/brownlight.woff2') format('woff2'),
-    url('../fonts/brownlight.woff') format('woff'),
-    url('../fonts/brownlight.svg#brownlight') format('svg');
+  font-family: "brownlight";
+  src: url("../fonts/brownlight.eot");
+  src: url("../fonts/brownlight.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/brownlight.woff2") format("woff2"),
+    url("../fonts/brownlight.woff") format("woff"),
+    url("../fonts/brownlight.svg#brownlight") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Brown';
-  src: url('../fonts/Brown-Regular.eot');
-  src: url('../fonts/Brown-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Brown-Regular.woff2') format('woff2'),
-    url('../fonts/Brown-Regular.woff') format('woff'),
-    url('../fonts/Brown-Regular.ttf') format('truetype'),
-    url('../fonts/Brown-Regular.svg#Brown-Regular') format('svg');
+  font-family: "Brown";
+  src: url("../fonts/Brown-Regular.eot");
+  src: url("../fonts/Brown-Regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Brown-Regular.woff2") format("woff2"),
+    url("../fonts/Brown-Regular.woff") format("woff"),
+    url("../fonts/Brown-Regular.ttf") format("truetype"),
+    url("../fonts/Brown-Regular.svg#Brown-Regular") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'BrownMedium';
-  src: url('../fonts/BrownMedium.eot');
-  src: url('../fonts/BrownMedium.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/BrownMedium.woff2') format('woff2'),
-    url('../fonts/BrownMedium.woff') format('woff'),
-    url('../fonts/BrownMedium.ttf') format('truetype'),
-    url('../fonts/BrownMedium.svg#BrownMedium') format('svg');
+  font-family: "BrownMedium";
+  src: url("../fonts/BrownMedium.eot");
+  src: url("../fonts/BrownMedium.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/BrownMedium.woff2") format("woff2"),
+    url("../fonts/BrownMedium.woff") format("woff"),
+    url("../fonts/BrownMedium.ttf") format("truetype"),
+    url("../fonts/BrownMedium.svg#BrownMedium") format("svg");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Ivy Mode';
-  src: url('../fonts/IvyMode-Regular.eot');
-  src: local('Ivy Mode Regular'), local('Ivy-Mode-Regular'),
-    url('../fonts/IvyMode-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/IvyMode-Regular.woff2') format('woff2'),
-    url('../fonts/IvyMode-Regular.woff') format('woff'),
-    url('../fonts/IvyMode-Regular.ttf') format('truetype'),
-    url('IvyMode-Regular.svg#IvyMode-Regular') format('svg');
+  font-family: "Ivy Mode";
+  src: url("../fonts/IvyMode-Regular.eot");
+  src: local("Ivy Mode Regular"), local("Ivy-Mode-Regular"),
+    url("../fonts/IvyMode-Regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/IvyMode-Regular.woff2") format("woff2"),
+    url("../fonts/IvyMode-Regular.woff") format("woff"),
+    url("../fonts/IvyMode-Regular.ttf") format("truetype");
+  // url('IvyMode-Regular.svg#IvyMode-Regular') format('svg');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Ivy Mode';
-  src: url('../fonts/IvyMode-SemiBold.eot');
-  src: local('Ivy Mode Semi Bold'), local('Ivy-Mode-Semi-Bold'),
-    url('../fonts/IvyMode-SemiBold.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/IvyMode-SemiBold.woff2') format('woff2'),
-    url('../fonts/IvyMode-SemiBold.woff') format('woff'),
-    url('../fonts/IvyMode-SemiBold.ttf') format('truetype'),
-    url('../fonts/IvyMode-SemiBold.svg#IvyMode-SemiBold') format('svg');
+  font-family: "Ivy Mode";
+  src: url("../fonts/IvyMode-SemiBold.eot");
+  src: local("Ivy Mode Semi Bold"), local("Ivy-Mode-Semi-Bold"),
+    url("../fonts/IvyMode-SemiBold.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/IvyMode-SemiBold.woff2") format("woff2"),
+    url("../fonts/IvyMode-SemiBold.woff") format("woff"),
+    url("../fonts/IvyMode-SemiBold.ttf") format("truetype"),
+    url("../fonts/IvyMode-SemiBold.svg#IvyMode-SemiBold") format("svg");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
-*{
+* {
   //   font-family: 'Poppins', sans-serif;
-  font-family: 'brownlight', sans-serif;
+  font-family: "brownlight", sans-serif;
   font-weight: 400;
   box-sizing: border-box;
 }
@@ -78,7 +78,7 @@
    License: none (public domain)
 */
 
-html{
+html {
   font-size: 16px;
 }
 
@@ -194,7 +194,7 @@ ol,
 ul {
   list-style: none;
 }
-a{
+a {
   color: #222;
   text-decoration: none;
 }
@@ -207,7 +207,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -216,7 +216,12 @@ table {
   border-spacing: 0;
 }
 
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Ivy Mode', sans-serif !important;
-    letter-spacing: 1px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Ivy Mode", sans-serif !important;
+  letter-spacing: 1px;
 }
