Modal form fixes

--- a/frontend/src/assets/scss/_modal.scss
+++ b/frontend/src/assets/scss/_modal.scss
@@ -86,6 +86,8 @@
   transition: all $easeTime ease;
   position: absolute;
   right: -25px;
+  background-color: transparent;
+  border: none;
   top: -15px;
   z-index: 1;
 
