--- a/frontend/src/assets/scss/_header.scss
+++ b/frontend/src/assets/scss/_header.scss
@@ -1,23 +1,23 @@
-@use './_variables' as *;
+@use "./_variables" as *;
 
-.header{
+.header {
   position: fixed;
   width: 100%;
   //   height: 56px;
   background-color: $bgDefault;
-  box-shadow: 0px 1px 0px #EEEEEE;
+  box-shadow: 0px 1px 0px #eeeeee;
   display: flex;
   align-items: center;
   z-index: 101;
   left: 0;
   top: 0;
-  @media screen and (max-width: $md){
+  @media screen and (max-width: $md) {
     height: 80px;
   }
   @media (min-width: $md) {
     height: 100px;
   }
-  .container{
+  .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -27,13 +27,13 @@
     }
   }
 
-  &__branding{
-    &__logo{
+  &__branding {
+    &__logo {
       color: $primary;
       text-decoration: none;
       transition: $linkTransitions;
       margin-left: -15px;
-      &:hover{
+      &:hover {
         color: $secondary;
       }
 
@@ -41,32 +41,33 @@
         font-size: 1rem;
       }
 
-      @media screen and (max-width: $md){
-        img{
-            width: 80px;
+      @media screen and (max-width: $md) {
+        img {
+          width: 80px;
         }
       }
     }
   }
 
-  &__nav{
+  &__nav {
     display: flex;
     align-items: center;
     @media (min-width: $xs) {
       gap: 0 10px;
     }
 
-    &__item{
+    &__item {
       position: relative;
       &--mobile {
         display: none;
-  
+
         @media (min-width: $lg) {
           display: block;
         }
       }
       &:hover {
-        .dropdown-menu, .popup{
+        .dropdown-menu,
+        .popup {
           opacity: 1;
           visibility: visible;
           pointer-events: unset;
@@ -77,20 +78,20 @@
         }
       }
 
-      &-active{
+      &-active {
         .header__nav__link {
-            color: $primary;
-            &:before{
-                left: 0;
-                width: 100%;
-            }
+          color: $primary;
+          &:before {
+            left: 0;
+            width: 100%;
+          }
         }
       }
 
       &--languages,
-      &--notifications{
+      &--notifications {
         padding: 1px;
-        span{
+        span {
           width: 40px;
           height: 40px;
           display: flex;
@@ -99,12 +100,12 @@
           border-radius: 100%;
           transition: $linkTransitions;
 
-          &.icon-bell{
+          &.icon-bell {
             font-size: 1rem;
             color: rgba($secondary, 30%);
           }
         }
-        .circle{
+        .circle {
           background-color: $primary;
           width: 8px;
           height: 8px;
@@ -113,19 +114,19 @@
           right: 11px;
           top: 11px;
         }
-        &:hover{
-          span{
+        &:hover {
+          span {
             background-color: #f5f5f5;
             color: $secondary !important;
-            &.circle{
+            &.circle {
               background-color: $primary;
             }
           }
         }
       }
-      &--menu{
+      &--menu {
         &:hover {
-          .header__nav__link__menu{
+          .header__nav__link__menu {
             background-color: $primary;
             border-color: $primary;
           }
@@ -137,7 +138,7 @@
             color: $primary;
           }
         }
-      
+
         .icon-menu {
           font-size: 1rem;
           align-self: center;
@@ -145,20 +146,20 @@
       }
     }
 
-    &__link{
+    &__link {
       text-decoration: none;
       position: relative;
       display: flex;
       align-items: center;
-      transition:$linkTransitions;
+      transition: $linkTransitions;
       height: 42px;
       font-size: 1.2rem;
-      font-family: 'BrownLight';
+      font-family: "BrownLight";
 
-      &--underline{
+      &--underline {
         margin-left: 20px;
         &:before {
-          content: '';
+          content: "";
           height: 3px;
           width: 0;
           position: absolute;
@@ -185,11 +186,11 @@
         transition: all $easeTime ease;
       }
 
-      &__user{
+      &__user {
         width: 30px;
         height: 30px;
 
-        &--init{
+        &--init {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -203,15 +204,15 @@
     }
   }
 
-  &.consent--header{
+  &.consent--header {
     box-shadow: none;
-    .header__nav__item{
-        display: none;
+    .header__nav__item {
+      display: none;
     }
   }
 }
 
-.dropdown-menu{
+.dropdown-menu {
   position: absolute;
   top: 140%;
   right: 0;
@@ -228,7 +229,7 @@
   &--sm {
     min-width: 140px;
   }
-  .show &{
+  .show & {
     opacity: 1;
     visibility: visible;
     pointer-events: unset;
@@ -236,177 +237,177 @@
   }
 }
 
-.popup{
-    position: absolute;
-    top: 142%;
-    right: -10px;
-    background-color: $secondary;
-    padding: 2.5rem;
-    box-shadow: 0px 3px 16px #00000024;
-    border-radius: 0.75rem;   
-    max-width: 450px;
+.popup {
+  position: absolute;
+  top: 142%;
+  right: -10px;
+  background-color: $secondary;
+  padding: 2.5rem;
+  box-shadow: 0px 3px 16px #00000024;
+  border-radius: 0.75rem;
+  max-width: 450px;
+  width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  z-index: 99;
+  transition: all 400ms ease;
+
+  @media screen and (min-width: $md) {
+    min-width: 460px;
+    padding: 25px;
+  }
+
+  @media screen and (max-width: $md) {
+    min-width: auto;
+    width: 440px;
+    left: -100%;
+    right: unset;
+    transform: translateX(-50%);
+  }
+  @media screen and (max-width: 440px) {
     width: 100%;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    z-index: 99;
-    transition: all 400ms ease; 
-
-    @media screen and (min-width: $md){
-        min-width: 460px;
-        padding: 25px;
+    min-width: 320px;
+    transform: translateX(-35%);
+    .popup__pointer {
+      right: 135px;
     }
+  }
 
-    @media screen and (max-width: $md){
-        min-width: auto;
-        width: 440px;
-        left: -100%;
-        right: unset;
-        transform: translateX(-50%);
+  &--sm {
+    min-width: 250px;
+  }
+
+  &__title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #eeff00;
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    span {
+      margin-left: 0.5rem;
     }
-    @media screen and (max-width: 440px) {
-      width: 100%;
-      min-width: 320px;
-      transform: translateX(-35%);
-      .popup__pointer{
-        right: 135px;
-      }
-    }
+  }
 
-    &--sm {
-        min-width: 250px;
-    }
+  &__icon {
+    background-color: transparent !important;
+  }
 
-    &__title{
-        font-size: 1.5rem;
-        font-weight: 600;
-        color: #EEFF00;
-        margin-bottom: 1rem;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        span{
-            margin-left: 0.5rem;
-        }
-    }
+  &__content {
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: $white;
+    line-height: 1.5;
+    margin-bottom: 1.5rem;
+  }
 
-    &__icon{
-        background-color: transparent !important;
-    }
+  &__btn {
+    @include font("BrownMedium", 1.2rem, 400, 1);
+    background: $white;
+    border-radius: 6px;
+    padding: 1.2rem 2.5rem;
+    color: $secondary;
+    width: fit-content;
+    margin-right: 30px;
+    cursor: pointer;
+    white-space: nowrap;
 
-    &__content{
-        font-size: 1.2rem;
-        font-weight: 400;
-        color: $white;
-        line-height: 1.5;
-        margin-bottom: 1.5rem;
-    }
-
-    &__btn{
-      @include font('BrownMedium', 1.2rem, 400, 1);
-      background: $white;
-      border-radius: 6px;
-      padding: 1.2rem 2.5rem;
-      color: $secondary;
-      width: fit-content;
-      margin-right: 30px;
-      cursor: pointer;
-      white-space: nowrap;
-
-      &:hover{
-          background-color: $primary;
-          color: $white;
-          transition: all 400ms ease; 
-      }
-
-      @media screen and (max-width: $sm){
-          width: 100%;
-          margin: 0 0 20px 0;
-      }
-    }
-
-    &__link{
-      @include font('BrownLight', 1.2rem, 400, 1);
+    &:hover {
+      background-color: $primary;
       color: $white;
-      white-space: nowrap;
-      letter-spacing: 0.4px;
-      text-decoration: underline;
-      text-underline-offset: 5px;
-      transition: all 400ms ease; 
-      cursor: pointer;
-      
-      &:hover{
-        color: $white;
-        text-decoration: none;
-        transition: all 400ms ease; 
+      transition: all 400ms ease;
+    }
+
+    @media screen and (max-width: $sm) {
+      width: 100%;
+      margin: 0 0 20px 0;
+    }
+  }
+
+  &__link {
+    @include font("BrownLight", 1.2rem, 400, 1);
+    color: $white;
+    white-space: nowrap;
+    letter-spacing: 0.4px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    transition: all 400ms ease;
+    cursor: pointer;
+
+    &:hover {
+      color: $white;
+      text-decoration: none;
+      transition: all 400ms ease;
+    }
+
+    @media screen and (max-width: $sm) {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  &__pointer {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 12px 12px 12px;
+    border-color: transparent transparent $secondary transparent;
+    position: absolute;
+    top: -10px;
+    right: 18px;
+
+    @media screen and (max-width: $md) {
+      right: 146px;
+    }
+  }
+
+  &__close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+    svg {
+      width: 28px;
+      height: 28px;
+
+      path {
+        fill: $border;
       }
-
-      @media screen and (max-width: $sm){
-          width: 100%;
-          text-align: center;
-      }
     }
+  }
 
-    &__pointer{
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 0 12px 12px 12px;
-        border-color: transparent transparent $secondary transparent;
-        position: absolute;
-        top: -10px;
-        right: 18px;
+  &__actions {
+    @include flex(center, flex-start);
 
-        @media screen and (max-width: $md){
-            right: 146px;
-        }
+    @media screen and (max-width: $sm) {
+      flex-direction: column;
     }
+  }
 
-    &__close{
-        position: absolute;
-        top: 10px;
-        right: 15px;
-        cursor: pointer;
-        svg{
-            width: 28px;
-            height: 28px;
-
-            path{
-                fill: $border;
-            }
-        }
-    }
-
-    &__actions{
-        @include flex(center, flex-start);
-
-        @media screen and (max-width: $sm){
-            flex-direction: column;
-        }
-    }
-
-    .show &{
-        opacity: 1;
-        visibility: visible;
-        pointer-events: unset;
-        top: 99%;
-    }
+  .show & {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: unset;
+    top: 99%;
+  }
 }
-.nav{
+.nav {
   display: flex;
   flex-flow: column;
 
-  &__item{
+  &__item {
     &--mobile {
       display: block;
-  
+
       @media (min-width: $lg) {
         display: none;
       }
     }
   }
 
-  &__link{
+  &__link {
     display: block;
     padding: 0.7rem 1.5rem;
     white-space: nowrap;
@@ -416,20 +417,20 @@
     position: relative;
     font-family: "BrownLight";
 
-    &:hover{
+    &:hover {
       color: $primary;
       background-color: rgba($primary, 3%);
     }
 
-    &--selected{
+    &--selected {
       padding-right: 2.4rem;
       color: $primary;
-      &:hover{
+      &:hover {
         background-color: transparent;
       }
-      &:after{
-        content: '\e918';
-        font-family: 'unified' !important;
+      &:after {
+        content: "\e918";
+        font-family: "unified" !important;
         position: absolute;
         right: 1rem;
         top: 50%;
@@ -439,7 +440,7 @@
     }
   }
 
-  &__divider{
+  &__divider {
     height: 1px;
     background-color: rgba($border, 60%);
     margin: 0.4rem 0;
