--- a/frontend/src/assets/scss/_modal.scss
+++ b/frontend/src/assets/scss/_modal.scss
@@ -248,6 +248,7 @@
     &__row {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
       justify-content: space-between;
       margin-bottom: 30px;
 
