--- a/frontend/src/components/Details.css
+++ b/frontend/src/components/Details.css
@@ -23,7 +23,7 @@ label{
     
     border: 1px solid #555;
     margin-right: 10px;
-    margin-left: -35px;
+    margin-left: -10px;
    
     
 }
@@ -43,7 +43,7 @@ label{
     font-weight: 400;
     
     margin-right: 10px;
-    margin-left: -35px;
+    margin-left: -10px;
 }
 .password:hover{
   border-color: rgb(231, 26, 26);
@@ -55,7 +55,7 @@ label{
 }
 
 .lb1{
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-size: 0.99rem;
     margin-right:rem;
 }
@@ -77,7 +77,7 @@ label{
     cursor: pointer;
     margin: 5px;
     margin-top: 2rem;
-    margin-left: -35px;
+    margin-left: -10px;
     border-radius: 7px;
     font-size: 15px;
     font-weight: bold;
@@ -113,4 +113,7 @@ label{
     text-align: center;
     margin-top: 12px;
     
+  }
+  .errors{
+    color: #e9143b;
   }
