--- a/frontend/src/assets/scss/login.scss
+++ b/frontend/src/assets/scss/login.scss
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "brown";
+  src: url("../fonts/Brown-Regular.woff") format("woff2"),
+    url("../fonts/BrownMedium.woff") format("woff2");
+}
+
 .login {
   width: 100%;
   height: 100vh;
@@ -5,6 +11,7 @@
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  font-family: "brown";
   .wrap {
     width: 40%;
     height: 40%;
@@ -13,6 +20,9 @@
     flex-direction: column;
     padding: 1rem;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    h4 {
+      font-weight: 500;
+    }
     .form-group {
       width: 100%;
       flex-direction: column;
