--- a/frontend/src/assets/scss/_modal.scss
+++ b/frontend/src/assets/scss/_modal.scss
@@ -306,3 +306,10 @@
     }
   }
 }
+
+.vibe-meter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2.2rem;
+}
