--- a/frontend/src/assets/scss/__variables.scss
+++ b/frontend/src/assets/scss/__variables.scss
@@ -1,12 +1,11 @@
 // Xolors
-$bgDefault: #F9F7F2;
-$primary: #FF385C;
+$bgDefault: #f9f7f2;
+$primary: #ff385c;
 $secondary: #222;
 $border: #ddd;
 $white: #fff;
 $black: #000;
-$bgLight: #F5F5F5;
-
+$bgLight: #f5f5f5;
 
 // Breakpoints
 $xs: 360px !default;
@@ -54,133 +53,132 @@ $easeTime: 500ms;
 $linkTransitions: color $easeTime ease, background-color $easeTime ease;
 
 div[class^="col_"] {
-    padding: 0 $gutter;
+  padding: 0 $gutter;
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -$gutter;
-    margin-right: -$gutter;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -$gutter;
+  margin-right: -$gutter;
 
-    >* {
-        flex-shrink: 0;
-        width: 100%;
-    }
+  > * {
+    flex-shrink: 0;
+    width: 100%;
+  }
 }
-
 
 // Grid loop
 $columns: 12; // Max number of columns
 
 .col_flex {
-    width: 100%;
+  width: 100%;
 
-    &--inline {
-        width: auto;
-    }
+  &--inline {
+    width: auto;
+  }
 }
 
 // Grid cells for small devices
 @for $i from 1 through $columns {
-    .col_x#{$i} {
-        flex: 0 0 auto;
-        width: calc(100% / #{$columns} * #{$i});
-    }
+  .col_x#{$i} {
+    flex: 0 0 auto;
+    width: calc(100% / #{$columns} * #{$i});
+  }
 }
 
 // Grid cells for small-medium devices
 @media (min-width: $sm) {
-    @for $i from 1 through $columns {
-        .col_sm_#{$i} {
-            flex: 0 0 auto;
-            width: calc(100% / #{$columns} * #{$i});
-        }
-
-        .col_sm_offset_#{$i} {
-            margin-left: calc(100% / #{$columns} * #{$i});
-        }
+  @for $i from 1 through $columns {
+    .col_sm_#{$i} {
+      flex: 0 0 auto;
+      width: calc(100% / #{$columns} * #{$i});
     }
+
+    .col_sm_offset_#{$i} {
+      margin-left: calc(100% / #{$columns} * #{$i});
+    }
+  }
 }
 
 // Grid cells for medium devices
 @media (min-width: $md) {
-    @for $i from 1 through $columns {
-        .col_md_#{$i} {
-            flex: 0 0 auto;
-            width: calc(100% / #{$columns} * #{$i});
-        }
-
-        .col_md_offset_#{$i} {
-            margin-left: calc(100% / #{$columns} * #{$i});
-        }
+  @for $i from 1 through $columns {
+    .col_md_#{$i} {
+      flex: 0 0 auto;
+      width: calc(100% / #{$columns} * #{$i});
     }
+
+    .col_md_offset_#{$i} {
+      margin-left: calc(100% / #{$columns} * #{$i});
+    }
+  }
 }
 
 // Grid cells for large devices
 @media (min-width: $lg) {
-    @for $i from 1 through $columns {
-        .col_lg_#{$i} {
-            flex: 0 0 auto;
-            width: calc(100% / #{$columns} * #{$i});
-        }
-
-        .col_lg_offset_#{$i} {
-            margin-left: calc(100% / #{$columns} * #{$i});
-        }
+  @for $i from 1 through $columns {
+    .col_lg_#{$i} {
+      flex: 0 0 auto;
+      width: calc(100% / #{$columns} * #{$i});
     }
+
+    .col_lg_offset_#{$i} {
+      margin-left: calc(100% / #{$columns} * #{$i});
+    }
+  }
 }
 
 // Grid cells for extra large devices
 @media (min-width: $xl) {
-    @for $i from 1 through $columns {
-        .col_xl_#{$i} {
-            flex: 0 0 auto;
-            width: calc(100% / #{$columns} * #{$i});
-        }
-
-        .col_xl_offset_#{$i} {
-            margin-left: calc(100% / #{$columns} *#{$i});
-        }
+  @for $i from 1 through $columns {
+    .col_xl_#{$i} {
+      flex: 0 0 auto;
+      width: calc(100% / #{$columns} * #{$i});
     }
+
+    .col_xl_offset_#{$i} {
+      margin-left: calc(100% / #{$columns} *#{$i});
+    }
+  }
 }
 
 // Grid cells for extra-extra large devices
 @media (min-width: $xxl) {
-    @for $i from 1 through $columns {
-        .row>.col_xxl_#{$i} {
-            flex: 0 0 auto;
-            width: calc(100% / #{$columns} * #{$i});
-        }
-
-        .col_xxl_offset_#{$i} {
-            margin-left: calc(100% / #{$columns} * #{$i});
-        }
+  @for $i from 1 through $columns {
+    .row > .col_xxl_#{$i} {
+      flex: 0 0 auto;
+      width: calc(100% / #{$columns} * #{$i});
     }
+
+    .col_xxl_offset_#{$i} {
+      margin-left: calc(100% / #{$columns} * #{$i});
+    }
+  }
 }
 
-@mixin font($fontFamily,$fontSize,$fontWeight,$lineHeight){
-    font-family: $fontFamily;
-    font-size: $fontSize;
-    font-weight: $fontWeight;
-    line-height: $lineHeight;
+@mixin font($fontFamily, $fontSize, $fontWeight, $lineHeight) {
+  font-family: $fontFamily;
+  font-size: $fontSize;
+  font-weight: $fontWeight;
+  line-height: $lineHeight;
 }
 
-@mixin flex($alignItems,$justifyContent){
-    display: flex;
-    align-items: $alignItems;
-    justify-content: $justifyContent;
+@mixin flex($alignItems, $justifyContent) {
+  display: flex;
+  align-items: $alignItems;
+  justify-content: $justifyContent;
 }
 
 // Common css
-.nowrap{
+.nowrap {
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.btn{
+.btn {
   background-color: transparent;
   display: flex;
   justify-content: center;
@@ -193,17 +191,17 @@ $columns: 12; // Max number of columns
   cursor: pointer;
   transition: all $easeTime ease;
 
-  &__black{
+  &__black {
     background-color: $secondary;
     color: $white;
 
-    &:hover{
+    &:hover {
       background-color: $primary;
       border-color: $primary;
     }
   }
 
-  &__white{
+  &__white {
     background-color: $white;
     border-radius: 8px;
     padding: 1rem 25px;
@@ -218,18 +216,18 @@ $columns: 12; // Max number of columns
     display: block;
     width: fit-content;
 
-    &:hover{
-        background-color: $black;
-        color: $white;
-        border-color: $black;
+    &:hover {
+      background-color: $black;
+      color: $white;
+      border-color: $black;
     }
 
-    @media screen and (max-width: $sm){
-        width: 100%;
+    @media screen and (max-width: $sm) {
+      width: 100%;
     }
   }
 
-  &__transparent{
+  &__transparent {
     background-color: transparent;
     color: $secondary;
     padding: 1rem 25px;
@@ -243,17 +241,17 @@ $columns: 12; // Max number of columns
     display: block;
     transition: all $easeTime ease;
 
-    &:hover{
-        background-color: $secondary;
-        color: $white;
+    &:hover {
+      background-color: $secondary;
+      color: $white;
     }
 
-    @media screen and (max-width: $sm){
-        width: 100%;
+    @media screen and (max-width: $sm) {
+      width: 100%;
     }
   }
 
-  &__red{
+  &__red {
     background-color: $primary;
     border-radius: 6px;
     padding: 1.2rem 40px;
@@ -268,13 +266,13 @@ $columns: 12; // Max number of columns
     display: block;
     width: fit-content;
 
-    &:hover{
-        background-color: $white;
-        color: $primary;
+    &:hover {
+      background-color: $white;
+      color: $primary;
     }
 
-    @media screen and (max-width: $sm){
-        width: 100%;
+    @media screen and (max-width: $sm) {
+      width: 100%;
     }
   }
 }
