--- a/frontend/src/assets/scss/_header.scss
+++ b/frontend/src/assets/scss/_header.scss
@@ -246,9 +246,9 @@
     border-radius: 0.75rem;   
     max-width: 450px;
     width: 100%;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+    // opacity: 0;
+    // visibility: hidden;
+    //pointer-events: none;
     z-index: 99;
     transition: all 400ms ease; 
 
