--- a/frontend/src/assets/scss/_feedback.scss
+++ b/frontend/src/assets/scss/_feedback.scss
@@ -106,6 +106,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            position: relative;
 
             img{
                 width: 100%;
