--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -1,16 +1,17 @@
-@forward './_normalize.scss';
-@forward './_variables';
-@forward './icons';
-@forward './global';
-@forward './header';
-@forward './home';
-@forward './card';
-@forward './consent';
-@forward './dashboard';
-@forward './favorites';
-@forward './profile';
-@forward './event';
-@forward './notifications';
-@forward './settings';
-@forward './feedback';
-@forward './modal';;
+@forward "./_normalize.scss";
+@forward "./_variables";
+@forward "./icons";
+@forward "./global";
+@forward "./header";
+@forward "./home";
+@forward "./card";
+@forward "./consent";
+@forward "./dashboard";
+@forward "./favorites";
+@forward "./profile";
+@forward "./event";
+@forward "./notifications";
+@forward "./settings";
+@forward "./feedback";
+@forward "./modal";
+@forward "./signup.scss";
