--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -13,4 +13,7 @@
 @forward './notifications';
 @forward './settings';
 @forward './feedback';
-@forward './modal';;
+@forward './modal';
+@forward'./Area.scss';
+@forward'./Details.scss';
+@forward'./SignUp.scss';
