add Review Button Working UI

--- a/frontend/src/assets/scss/_modal.scss
+++ b/frontend/src/assets/scss/_modal.scss
@@ -245,6 +245,7 @@
     .ratings{
         &__row{
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: space-between;
             margin-bottom: 30px;
