Notification : Backend Part

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -16,4 +16,5 @@
 @forward "./modal";
 @forward "./Login";
 @forward "./register";
-@forward "../../components/timer/circularTimer";
+@forward "./circularTimer";
+@forward "./rescheduleModal";
