PopUp timer After Loading- Completed

--- a/frontend/src/assets/scss/_header.scss
+++ b/frontend/src/assets/scss/_header.scss
@@ -66,7 +66,7 @@
         }
       }
       &:hover {
-        .dropdown-menu, .popup{
+        .dropdown-menu{
           opacity: 1;
           visibility: visible;
           pointer-events: unset;
@@ -246,9 +246,8 @@
     border-radius: 0.75rem;   
     max-width: 450px;
     width: 100%;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+   
+   
     z-index: 99;
     transition: all 400ms ease; 
 
